Bug 1666964 - Retrieve Printer Default Media Through IPP Attribute r=hiro

cupsGetDestMediaDefault seems to not be returning the correct defaults,
so this patch retrieves the default media through the IPP attribute
instead, in hopes that this will provide more accurate defaults.

Differential Revision: https://phabricator.services.mozilla.com/D91376